force-app/main/default/objects/due__Diduenjoy_Answer__c/due__Diduenjoy_Answer__c.object-meta.xml
<CustomObject>
    <label>Diduenjoy Answer</label>
    <nameField>
        <label>Diduenjoy Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diduenjoy Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>