force-app/main/default/objects/due__Diduenjoy_Answer__c/fields/due__Diduenjoy_Feedback__c.field-meta.xml
<CustomField>
    <fullName>due__Diduenjoy_Feedback__c</fullName>
    <label>Diduenjoy Feedback</label>
    <referenceTo>due__Diduenjoy_Feedback__c</referenceTo>
    <relationshipLabel>Diduenjoy Answers</relationshipLabel>
    <relationshipName>Diduenjoy_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>